--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,15 @@ repositories {
 
 apply plugin: 'java'
 
+task fatJar(type: Jar) {
+	manifest {
+		attributes 'Main-Class': 'com.zwahlen.catfeeder.CatFeeder'
+	}
+
+	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+	with jar
+}
+
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 group = 'com.zwahlen'
